test/types/bytes/param/param-errors2.good
param-errors2.chpl:3: error: illegal cast from bytes to string
