test/types/bytes/param/param-errors2.chpl
// cannot cast a bytes to a string
param b2 = b"some bytes";
param s2 = b2:string;
